# galaxyHackers

./: .example.secrets.toml  .gitignore  Makefile  README.md  config.py  data.py  legacy_for_img.py  main.py  metrics.py  models.ipynb  pyproject.toml  requirements.txt  segmentation (1).py  segmentation.py  settings.py  settings.toml  setup.cfg  train.py
data/: config.py  data.py  segmentation.py
data/random/: data.py
metrics/: metrics.py
models/: alexnet_vgg.py  baseline.py  densenet.py  effnet.py  main.py  plot_builder.py  resnet18.py  spinalnet_resnet.py  spinalnet_vgg.py  train.py  vitL16.py
notebooks/: data.ipynb  main.ipynb  models.ipynb  normalization.ipynb  optimization.ipynb  optimizers_perfomance.csv
notebooks/results/: DenseNet_results.npz  EfficientNet_results.npz  ResNet18_results.npz  ResNet50_results.npz  VGGNet_results.npz  ViT_results.npz
