[tool.poetry]
name = "galaxy-hackers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^6.1.0"
astroquery = "^0.4.7"
numpy = "^1.26.4"
pandas = "^2.2.2"
pillow = "^10.3.0"
pixell = "^0.23.14"
scikit-learn = "^1.5.0"
scikit-image = "^0.23.2"
timm = "^1.0.3"
torch = "^2.3.1"
torch-optimizer = "^0.3.0"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
wget = "^3.2"
wandb = "^0.17.1"
opencv-python = "^4.10.0.82"
autoflake = "^2.3.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"
pylint = "^3.2.3"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
